# term-maths

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: crossterm_demo.rs  debug_ast.rs  dsp_equations.rs  latex_roundtrip.rs  matrix_demo.rs  ratatui_demo.rs  render_demo.rs
python/docs/: api.rst  conf.py  examples.rst  index.rst
python/examples/: block_composition.py  dsp_equations.py  math_fonts.py  render_demo.py
python/term_maths/: __init__.py
src/: crossterm_renderer.rs  latex_renderer.rs  layout.rs  lib.rs  mathfont.rs  python.rs  ratatui_widget.rs  rendered_block.rs  renderer.rs
tests/: layout_tests.rs
