[package]
name = "term-maths"
version = "0.1.0"
edition = "2024"
description = "Character-grid mathematical notation renderer for terminals --- LaTeX math to 2D Unicode art"
license = "MIT OR Apache-2.0"
keywords = ["math", "latex", "terminal", "unicode", "rendering"]
categories = ["command-line-interface", "text-processing", "visualization"]

[dependencies]
crossterm = { version = "0.29.0", optional = true }
pulldown-latex = { version = "0.7.1", optional = true }
ratatui = { version = "0.30.0", optional = true }
rust-latex-parser = "0.1.0"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"

[features]
ratatui = ["dep:ratatui"]
crossterm = ["dep:crossterm"]
pulldown-latex = ["dep:pulldown-latex"]
